tests/ui/fail_generics_params_differ.stderr
error: generics differ, which must coincide as string:
           in impl cached methods: < T > where T : ToString + From < String > ,
           in struct definition:   < S > where S : ToString + From < String > ,
  --> tests/ui/fail_generics_params_differ.rs:13:12
   |
13 | struct Hoge<S>
   |            ^^^

error[E0609]: no field `__cache_fields__` on type `&Hoge<T>`
 --> tests/ui/fail_generics_params_differ.rs:1:1
  |
1 | #[struct_cache_field::impl_cached_method]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unknown field
  |
  = note: this error originates in the attribute macro `struct_cache_field::impl_cached_method` (in Nightly builds, run with -Z macro-backtrace for more info)
